# Self-Healing-Multi-Agent-Coding-Assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/self_healing_coder/: __init__.py  cli.py  config.py  llm.py  observability.py  persistence.py  server.py  state.py  telemetry.py
src/self_healing_coder/agents/: architect.py  coder.py  debugger.py  executor.py  security.py
src/self_healing_coder/eval/: runner.py  tasks.py
src/self_healing_coder/graph/: builder.py  routers.py
src/self_healing_coder/prompts/: __init__.py  architect.md  coder.md  debugger.md
src/self_healing_coder/tools/: e2b_executor.py
tests/: conftest.py  test_e2e_happy_path.py  test_eval_harness.py  test_executor_mock.py  test_router_enum.py  test_security_node.py  test_server.py  test_state_contract.py  test_telemetry.py
