[project]
name = "self-healing-coder"
version = "0.1.0"
description = "Production-ready self-healing multi-agent coding assistant (LangGraph + E2B + Langfuse)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Self-Healing Coder" }]
dependencies = [
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "e2b-code-interpreter>=1.2",
    "langfuse>=3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13",
    "tenacity>=8.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
]
security = [
    "bandit>=1.7",
]
sqlite = [
    "langgraph-checkpoint-sqlite>=2.0",
]
all = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "bandit>=1.7",
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.scripts]
self-healing-coder = "self_healing_coder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/self_healing_coder"]

[tool.hatch.build.targets.wheel.force-include]
"src/self_healing_coder/prompts" = "self_healing_coder/prompts"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "F401"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/self_healing_coder"]
